# Pettie

./: .gitignore  README.md
Docs/: Pinout_ESP32-D0WD_DevKit V1.ods
neuron-viewer/: example_settings.yaml  install.sh  launch.sh  logs.py  mqtt_service.py  neuron_viewer.py  requrements.txt  unitests.py
pettie-core/: .clang-format  CMakeLists.txt  README.md  check_format.sh  format.sh  sdkconfig.defaults
pettie-core/libs/Nematoduino_Library/: CMakeLists.txt
pettie-core/libs/Nematoduino_Library/src/: behaviors.c  behaviors.h  worm.c  worm.h
pettie-core/libs/Nematoduino_Library/src/utility/: connectome.c  muscles.c
pettie-core/libs/debug_tools/: CMakeLists.txt  Kconfig.projbuild  README.md
pettie-core/libs/debug_tools/src/: async_printf.c  async_printf.h  async_profiler.c  debug_assist.c  debug_assist.h  debug_tools.c  debug_tools.h  template_debug_tools_conf.h
pettie-core/libs/debug_tools/src/arch/: debug_tools_arch.h
pettie-core/libs/debug_tools/src/arch/arm_cortex/: debug_tools_conf.h  debug_tools_m3_mx.c  (+1 more)
pettie-core/main/: CMakeLists.txt  Kconfig.projbuild  main.c  neurons_list.c  neurons_list.h  pettie_core.c  pettie_core.h
pettie-core/main/common/: common.h  common_func.c  hash_functions.c  hash_functions.h  pins.h  settings.h
pettie-core/main/memory_model/: memory_model.c  memory_model.h  memory_model_topics.c  memory_model_topics.h
pettie-core/main/mqtt/: mqtt_config.h  mqtt_func.c  mqtt_func.h
pettie-core/main/servo/: servo.c  servo.h  servo_pwm.c
pettie-core/main/wireless/: wireless.h  wireless_conf.h  wireless_main.c
(+3 files in other folders)
